Took out buttons and fixed overflow

--- a/client/movieapp/src/App.css
+++ b/client/movieapp/src/App.css
@@ -9,6 +9,7 @@
 
 #header {
   width: 100vw;
+  height: 100%;
 }
 
 #header .carousel-indicators {
@@ -19,15 +20,17 @@
   visibility: hidden;
 }
 
+#header .carousel-caption {
+  text-align: left;
+}
+
 .card-slider {
   position: relative;
   max-width: 80%;
-  overflow: hidden;
 }
 
 .card-slider-wrapper {
   display: flex;
-  overflow: hidden;
 }
 
 .card-slider toprated {
